--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -6,7 +6,7 @@
         {{ item.name }}
       </a></li>
     {% endfor %}
-    <a id="forkme_banner" href="https://github.com/prince-chrismc/Docker-Security-Environment">GitHub</a>
+    <li style="float:right"><a id="forkme_banner" href="https://github.com/prince-chrismc/Docker-Security-Environment">GitHub</a></li>
   </div>
   </ul>
 </nav>
