--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -30,3 +30,8 @@ nav li a:hover:not(.active) {
 nav .active {
     background-color: #0090ff;
 }
+
+#forkme_banner {
+    padding: 14px 50px 14px 16px;
+    background: url(../images/blacktocat.png) #0090ff no-repeat 90% 50%;
+}
