--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -34,4 +34,6 @@ nav .active {
 #forkme_banner {
     padding: 14px 50px 14px 16px;
     background: url(../images/blacktocat.png) #0090ff no-repeat 90% 50%;
+    position: inherit;
+    font-weight: inherit;
 }
