--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,6 +9,8 @@ nav ul {
     padding: 0;
     overflow: hidden;
     background-color: #333;
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
 }
 
 nav li {
