--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,5 @@
 <nav>
-  <ul class="inner">
+  <ul class="inner" style="padding: inherit;">
     {% for item in site.data.navigation %}
       <li><a href="{{ site.baseurl }}{{ item.link }}"{% if page.url == item.link %} class="active"{% endif %}>
         {{ item.name }}
