--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,13 +4,16 @@
 @import "{{ site.theme }}";
 
 nav {
-    list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
     background-color: #333;
     position: -webkit-sticky; /* Safari */
     position: sticky;
+}
+
+nav ul {
+    list-style-type: none;
 }
 
 nav li {
